--- a/resource/ros2_controllers.yaml
+++ b/resource/ros2_controllers.yaml
@@ -31,6 +31,11 @@ robotiq_gripper_controller:
   ros__parameters:
     joints:
       - finger_joint
+      - left_inner_finger_joint
+      - left_inner_knuckle_joint
+      - right_outer_knuckle_joint
+      - right_inner_finger_joint
+      - right_inner_knuckle_joint
     command_interfaces:
       - position
     state_interfaces:
