--- a/resource/moveit_kinematics.yaml
+++ b/resource/moveit_kinematics.yaml
@@ -1,4 +1,4 @@
-spot_arm:
+manipulator:
   kinematics_solver: kdl_kinematics_plugin/KDLKinematicsPlugin
-  kinematics_solver_search_resolution: 0.5
-  kinematics_solver_timeout: 0.5
+  kinematics_solver_search_resolution: 0.0050000000000000001
+  kinematics_solver_timeout: 0.0050000000000000001
