--- a/resource/ros2_controllers.yaml
+++ b/resource/ros2_controllers.yaml
@@ -3,16 +3,16 @@ controller_manager:
   ros__parameters:
     update_rate: 30  # Hz
 
-    joint_trajectory_controller:
+    kinova_joint_trajectory_controller:
       type: joint_trajectory_controller/JointTrajectoryController
 
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
 
     robotiq_gripper_controller:
-      type: position_controllers/GripperActionController
+      type: joint_trajectory_controller/JointTrajectoryController
 
-joint_trajectory_controller:
+kinova_joint_trajectory_controller:
   ros__parameters:
     joints:
       - joint_1
@@ -29,9 +29,10 @@ joint_trajectory_controller:
 
 robotiq_gripper_controller:
   ros__parameters:
-    joint: finger_joint
+    joints:
+      - finger_joint
     command_interfaces:
       - position
     state_interfaces:
       - position
-    allow_stalling: true
+      - velocity
