--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,7 @@ repos:
   hooks:
   - id: check-yaml
   - id: check-added-large-files
+    args: ['--maxkb=1000']
   - id: end-of-file-fixer
 
 # - repo: https://github.com/pre-commit/mirrors-mypy
