fix moveit servo, gripper closing in webots simulation [WIP]

--- a/package.xml
+++ b/package.xml
@@ -9,6 +9,8 @@
 
   <exec_depend>rclpy</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>control_msgs</exec_depend>
+  <exec_depend>tf2_geometry_msgs</exec_depend>
 
   <exec_depend>builtin_interfaces</exec_depend>
   <exec_depend>rviz2</exec_depend>
