--- a/resource/ros2_controllers.yaml
+++ b/resource/ros2_controllers.yaml
@@ -1,16 +1,15 @@
-# This config file is used by ros2_control
 controller_manager:
   ros__parameters:
     update_rate: 30  # Hz
 
-    kinova_joint_trajectory_controller:
-      type: joint_trajectory_controller/JointTrajectoryController
-
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
 
-    robotiq_gripper_controller:
+    kinova_joint_trajectory_controller:
       type: joint_trajectory_controller/JointTrajectoryController
+
+    robotiq_gripper_controller:
+      type: position_controllers/GripperActionController
 
 kinova_joint_trajectory_controller:
   ros__parameters:
@@ -26,13 +25,9 @@ kinova_joint_trajectory_controller:
     state_interfaces:
       - position
       - velocity
-
+    
 robotiq_gripper_controller:
   ros__parameters:
-    joints:
-      - finger_joint
-    command_interfaces:
-      - position
-    state_interfaces:
-      - position
-      - velocity
+    default: true
+    joint: finger_joint
+    allow_stalling: true
