--- a/resource/moveit_joint_limits.yaml
+++ b/resource/moveit_joint_limits.yaml
@@ -2,39 +2,44 @@
 
 # For beginners, we downscale velocity and acceleration limits.
 # You can always specify higher scaling factors (<= 1.0) in your motion requests.  # Increase the values below to 1.0 to always move at maximum speed.
-default_velocity_scaling_factor: 0.1
-default_acceleration_scaling_factor: 0.1
+default_velocity_scaling_factor: 1.0
+default_acceleration_scaling_factor: 1.0
 
 # Specific joint properties can be changed with the keys [max_position, min_position, max_velocity, max_acceleration]
 # Joint limits can be turned off with [has_velocity_limits, has_acceleration_limits]
 joint_limits:
   joint_1:
     has_velocity_limits: true
-    max_velocity: 1.3963
+    max_velocity: 3.0  
     has_acceleration_limits: true
-    max_acceleration: 1.39
+    max_acceleration: 0.7  
   joint_2:
     has_velocity_limits: true
-    max_velocity: 1.3963
+    max_velocity: 3.0  
     has_acceleration_limits: true
-    max_acceleration: 1.39
+    max_acceleration: 0.7  
   joint_3:
     has_velocity_limits: true
-    max_velocity: 1.3963
+    max_velocity: 3.0  
     has_acceleration_limits: true
-    max_acceleration: 1.39
+    max_acceleration: 0.7  
   joint_4:
     has_velocity_limits: true
-    max_velocity: 1.2218
+    max_velocity: 4.0  
     has_acceleration_limits: true
-    max_acceleration: 1.22
+    max_acceleration: 1.5  
   joint_5:
     has_velocity_limits: true
-    max_velocity: 1.2218
+    max_velocity: 4.0  
     has_acceleration_limits: true
-    max_acceleration: 1.22
+    max_acceleration: 1.5  
   joint_6:
     has_velocity_limits: true
-    max_velocity: 1.2218
+    max_velocity: 4.0  
     has_acceleration_limits: true
-    max_acceleration: 1.22
+    max_acceleration: 1.5  
+  # finger_joint:
+  #   has_velocity_limits: true
+  #   max_velocity: 0.5
+  #   has_acceleration_limits: true
+  #   max_acceleration: 1.0
