--- a/resource/moveit_joint_limits.yaml
+++ b/resource/moveit_joint_limits.yaml
@@ -38,8 +38,8 @@ joint_limits:
     max_velocity: 4.0  
     has_acceleration_limits: true
     max_acceleration: 1.5  
-  finger_joint:
-    has_velocity_limits: true
-    max_velocity: 2.0
-    has_acceleration_limits: true
-    max_acceleration: 0.5
+  # finger_joint:
+  #   has_velocity_limits: true
+  #   max_velocity: 2.0
+  #   has_acceleration_limits: true
+  #   max_acceleration: 0.5
